src/test/deca/codegen/valid/oracle/bool/bool_or_all.ass
; test de la taille de la pile
	TSTO #2	; Taille maximale de la pile
	ADDSP #2
	BOV stack_overflow_error
; start main program
; Construction de la table des méthodes de Object
	LOAD #null, R0
	STORE R0, 1(GB)
	LOAD code.Object.equals, R0
	STORE R0, 2(GB)
; Main program
; Beginning of main declarations:
; Beginning of main instructions:
	BRA E_fin.1
E_fin.1:
	LOAD #1, R1
	WINT
	WNL
	BRA E_Fin.0
E_Sinon.0:
	LOAD #0, R1
	WINT
	WNL
E_Fin.0:
	BRA E_fin.3
	BRA E_Sinon.2
E_fin.3:
	LOAD #1, R1
	WINT
	WNL
	BRA E_Fin.2
E_Sinon.2:
	LOAD #0, R1
	WINT
	WNL
E_Fin.2:
E_fin.5:
	LOAD #1, R1
	WINT
	WNL
	BRA E_Fin.4
E_Sinon.4:
	LOAD #0, R1
	WINT
	WNL
E_Fin.4:
	BRA E_Sinon.6
E_fin.7:
	LOAD #1, R1
	WINT
	WNL
	BRA E_Fin.6
E_Sinon.6:
	LOAD #0, R1
	WINT
	WNL
E_Fin.6:
	HALT
; end main program
code.Object.equals:
	LOAD -2(LB), R0
	LOAD -3(LB), R1
	CMP R0, R1
	BEQ equal
not_equal:
	LOAD #0, R0
	RTS
equal:
	LOAD #1, R0
	RTS
stack_overflow_error:
	WSTR "Error : Stack Overflow"
	WNL
	ERROR
io_error:
	WSTR "Error : Input / Output Error "
	WNL
	ERROR
; end main program
