src/test/deca/codegen/invalid/div_0_cachee_dans_if.ass
; test de la taille de la pile
	TSTO #2	; Taille maximale de la pile
	ADDSP #2
	BOV stack_overflow_error
; start main program
; Construction de la table des méthodes de Object
	LOAD #null, R0
	STORE R0, 1(GB)
	LOAD code.Object.equals, R0
	STORE R0, 2(GB)
; Main program
; Beginning of main declarations:
; Beginning of main instructions:
E_fin.7:
	LOAD #1, R1
	FLOAT R1, R1
	DIV #0x0.0p0, R1
	BOV overflow_error
	WFLOAT
	WNL
	BRA E_Fin.8
E_Sinon.8:
E_Fin.8:
	BRA E_Fin.6
E_Sinon.6:
E_Fin.6:
	BRA E_Fin.5
E_Sinon.5:
E_Fin.5:
	BRA E_Fin.4
E_Sinon.4:
E_Fin.4:
	BRA E_Fin.3
E_Sinon.3:
E_Fin.3:
	BRA E_Fin.2
E_Sinon.2:
E_Fin.2:
	BRA E_Fin.1
E_Sinon.1:
E_Fin.1:
	BRA E_Fin.0
E_Sinon.0:
E_Fin.0:
	HALT
; end main program
code.Object.equals:
	LOAD -2(LB), R0
	LOAD -3(LB), R1
	CMP R0, R1
	BEQ equal
not_equal:
	LOAD #0, R0
	RTS
equal:
	LOAD #1, R0
	RTS
stack_overflow_error:
	WSTR "Error : Stack Overflow"
	WNL
	ERROR
overflow_error:
	WSTR "Error : Overflow during arithmetic operation"
	WNL
	ERROR
io_error:
	WSTR "Error : Input / Output Error "
	WNL
	ERROR
; end main program
